Fix video click on tablet/mobile only

--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ header img {
     .headline{
         width: 70%;
     }
+
+    .video-wrapper video {
+        pointer-events: none;
+    }
 }
 
 @media (max-width: 430px) {
